--- a/nikeshoes.html
+++ b/nikeshoes.html
@@ -1,80 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-    Nike Shoes Website
+   <title> Nike Shoes Website </title>
+    <style>
+         .a{
+            color: rgb(0, 119, 255);
+        }
+        .a:active{
+            color: orangered;
+        }
+         nike-p{
+            font-weight: bold;
+            font-size: 20px;
+        }
+        .price-p{
+            font-weight: bold;
+            color: rgb(26, 108, 17);
+        }
+        .addcart-button{
+            background-color: rgb(248, 212, 7);
+            border: none;
+            height: 30px;
+            width: 100px;
+            border-radius: 15px;
+            cursor: pointer;
+            transition: opacity 0.15s;
+        }
+        .addcart-button:hover{
+            opacity: 0.7;
+        }
+        .addcart-button:active{
+            opacity: 0.4;
+        }
+        .buy-button{
+            background-color: rgb(248, 132, 7);
+            border: none;
+            height: 30px;
+            width: 100px;
+            border-radius: 15px;
+            cursor: pointer;
+            transition: background-color 0.15s;
+        }
+        .buy-button:hover{
+            background-color:  rgb(255, 85, 0);
+        }
+        .buy-button:active{
+            opacity: 0.5;
+        }
+    </style>
 </head>
 <body>
-<style>
-    .a{
-        color: rgb(0, 119, 255);
-    }
-    .a:active{
-        color: orangered;
-    }
-</style>
-<a href="https://www.amazon.in">
-    Back to Amazon
-</a>
-<style>
-    .nike-p{
-        font-weight: bold;
-        font-size: 20px;
-    }
-</style>
-<p class="nike-p">
-    Nike Black Running Shoes
-</p>
-<style>
-    .price-p{
-        font-weight: bold;
-        color: rgb(26, 108, 17);
-    }
-</style>
-<p class="price-p">
-    $39 - in stock
-</p>
-<p>
-    Free delivery tomorrow.
-</p>
-<style>
-    .addcart-button{
-        background-color: rgb(248, 212, 7);
-        border: none;
-        height: 30px;
-        width: 100px;
-        border-radius: 15px;
-        cursor: pointer;
-        transition: opacity 0.15s;
-    }
-    .addcart-button:hover{
-        opacity: 0.7;
-    }
-    .addcart-button:active{
-        opacity: 0.4;
-    }
-</style>
-<button class="addcart-button">
-    Add to Cart
-</button>
-<style>
-    .buy-button{
-        background-color: rgb(248, 132, 7);
-        border: none;
-        height: 30px;
-        width: 100px;
-        border-radius: 15px;
-        cursor: pointer;
-        transition: background-color 0.15s;
-    }
-    .buy-button:hover{
-        background-color:  rgb(255, 85, 0);
-    }
-    .buy-button:active{
-        opacity: 0.5;
-    }
-</style>
-<button class="buy-button">
-    Buy now
-</button>
+    <a href="https://www.amazon.in">
+        Back to Amazon
+    </a>
+    <p class="nike-p">
+        Nike Black Running Shoes
+    </p>
+    <p class="price-p">
+        $39 - in stock
+    </p>
+    <p>
+        Free delivery tomorrow.
+    </p>
+    <button class="addcart-button">
+        Add to Cart
+    </button>
+    <button class="buy-button">
+        Buy now
+    </button>
 </body>
 </html>
